# vasp_manager

./: .gitignore  Cargo.toml  INCAR  README.md
crates/kpoints/: Cargo.toml
crates/kpoints/src/: lib.rs
crates/lib/incar/: Cargo.toml
crates/lib/kpoints/src/: lib.rs
crates/lib/poscar/: Cargo.toml
crates/lib/potcar/: Cargo.toml
crates/lib/vasp_files/: Cargo.toml
crates/lib/vasp_files/src/: lib.rs
crates/lib/vasp_files/src/incar/: data.rs  incar.rs  incar_tag.rs  mod.rs
crates/lib/vasp_files/src/kpoints/: core.rs  impl_kpoints.rs  mod.rs
crates/lib/vasp_files/src/poscar/: core.rs  impl_geometry.rs  impl_io.rs  impl_lattice.rs  impl_poscar.rs  mod.rs
crates/lib/vasp_files/src/potcar/: core.rs  generator.rs  mod.rs  util.rs
crates/lib/vasp_files/tests/: test_incar.rs  test_kpoints.rs  test_poscar.rs
crates/lib/vasp_files/tests/data/: INCAR  POSCAR_slab
crates/poscar/: Cargo.toml
crates/poscar/src/: geometry.rs  io.rs  lib.rs
crates/potcar/src/: potcar.rs
crates/vasp_manager/: Cargo.toml
crates/vasp_manager/src/: check_util.rs  cli.rs  config_parser.rs  main.rs
crates/vasp_manager/src/cli/: command.rs
crates/vasp_manager/src/cli/subcommands/: continue_job.rs  create_job.rs  init_job.rs  mod.rs  show_incar.rs  submit_job.rs
crates/vasp_manager/src/config_parser/: config.rs  gen_incar.rs  gen_job_script.rs  gen_kpoints.rs  gen_potcar.rs
crates/vasp_manager/src/template/: mod.rs
crates/vasp_manager/src/template/templates/: INCAR_bader  Vasp.toml.template
crates/vasp_manager/src/templates/: INCAR_singlepoint
src/: check_util.rs  cli.rs  config_parser.rs  main.rs  template.rs  util.rs
src/cli/: command.rs  mod.rs
src/cli/subcommands/: init_job.rs  mod.rs
src/config_parser/: gen_potcar.rs  mod.rs
src/data/: potcar.json
src/potcargen/: mod.rs
src/template/templates/: INCAR_relax  Vasp.toml.template
src/templates/: INCAR_aimd  INCAR_relax  INCAR_singlepoint  KPOINTS  Vasp.toml.template  job_script.sh
templates/: test.txt
(+4 files in other folders)
