[package]
name = "vasp_manager"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.16", features = ["derive", "cargo"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tera = "1.16.0"
toml = "0.5.9"
