[package]
name = "vasp_manager"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.16", features = ["derive", "cargo"] }
eyre = "0.6.8"
glob = "0.3.0"
home = "0.5.3"
inquire = "0.3.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tera = "1.16.0"
toml = "0.5.9"
vasp_files = { git = "https://github.com/mjhong0708/vasp_files.git" }