[package]
name = "vasp_manager"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.16", features = ["derive", "cargo"] }
eyre = "0.6.8"
glob = "0.3.0"
home = "0.5.3"
inquire = "0.2.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tera = "1.16.0"
toml = "0.5.9"
potcar = { path = "../potcar" }
kpoints = { path = "../kpoints" }
poscar = { path = "../poscar" }