[package]
name = "vasp_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
nalgebra = "0.31.1"
eyre = "0.6.8"
lazy_static = "1.4.0"
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
phf = "0.11.1"
